# marker

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: benchmarks.yml  ci.yml  publish.yml  scripts.yml
benchmarks/: README.md  inference.py  postprocess.py  summarize.py
benchmarks/competitors/: docling_infer.py  liteparse_infer.py  mineru_infer.sh
benchmarks/table/: inference.py  table.py
marker/: models.py  output.py  settings.py  util.py
marker/builders/: document.py  layout.py  line.py  ocr.py  structure.py
marker/config/: crawler.py  parser.py  printer.py
marker/converters/: pdf.py  table.py
marker/processors/: blank_page.py  block_relabel.py  code.py  equation.py  line_merge.py  marginalia.py  reference.py  sectionheader.py  table.py  table_recon.py
marker/processors/llm/: llm_equation.py  llm_form.py  llm_image_description.py  llm_mathblock.py  llm_table.py  llm_table_merge.py
marker/providers/: image.py  pdf.py
marker/renderers/: __init__.py  chunk.py  html.py  json.py  markdown.py  ocr_json.py
marker/schema/: __init__.py  document.py  labels.py  polygon.py  registry.py
marker/schema/blocks/: __init__.py  (+5 more)
marker/scripts/: chunk_convert.sh  common.py  convert.py  extraction_app.py  run_streamlit_app.py  server.py  streamlit_app.py
marker/services/: azure_openai.py  claude.py  gemini.py  ollama.py  openai.py  openrouter.py  vertex.py
marker/utils/: batch.py  image.py
signatures/version1/: cla.json
tests/: conftest.py
tests/builders/: test_blank_page.py  test_document_builder.py  test_garbled_pdf.py  test_layout_replace.py  test_ocr_builder.py  test_ocr_pipeline.py  test_rotated_bboxes.py
tests/config/: test_config.py
tests/converters/: test_modes.py  test_ocr_converter.py  test_olmocr_bench.py  test_pdf_converter.py
tests/processors/: test_document_toc_processor.py  test_equation_processor.py  test_llm_processors.py  test_table_merge.py  test_table_processor.py
tests/providers/: test_document_providers.py  test_image_provider.py  test_pdf_provider.py
tests/renderers/: test_chunk_renderer.py
(+4 files in other folders)
