[project]
name = "marker-pdf"
version = "2.0.0"
description = "Convert documents to markdown with high speed and accuracy."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vik Paruchuri", email = "github@vikas.sh" },
]
requires-python = ">=3.10,<4"
keywords = ["pdf", "markdown", "ocr", "nlp"]
dependencies = [
    "pillow>=10.1.0,<11",
    "pydantic>=2.4.2,<3",
    "pydantic-settings>=2.0.3,<3",
    "transformers>=5.12.1,<6",
    "python-dotenv>=1.0.0,<2",
    "torch>=2.7.0,<3",
    "psutil>=7.0.0,<8",
    "tqdm>=4.66.1,<5",
    "ftfy>=6.1.1,<7",
    "rapidfuzz>=3.8.1,<4",
    "surya-ocr>=0.22.1,<0.23.0",
    "regex>=2024.4.28",
    "pdftext>=0.7.0,<0.8.0",
    "markdownify>=1.1.0,<2",
    "click>=8.2.0,<9",
    "markdown2>=2.5.2,<3",
    "filetype>=1.2.0,<2",
    "google-genai>=1.40.0,<3",
    "anthropic>=0.69.0,<1",
    "openai>=2.2.0,<3",
    "scikit-learn>=1.6.1,<2",
]

[project.urls]
Repository = "https://github.com/datalab-to/marker"

[project.optional-dependencies]
full = [
    "mammoth>=1.9.0,<2",
    "openpyxl>=3.1.5,<4",
    "python-pptx>=1.0.2,<2",
    "ebooklib>=0.18,<0.19",
    "weasyprint>=63.1,<64",
]

[project.scripts]
marker = "marker.scripts.convert:convert_cli"
marker_single = "marker.scripts.convert_single:convert_single_cli"
marker_gui = "marker.scripts.run_streamlit_app:streamlit_app_cli"
marker_server = "marker.scripts.server:server_cli"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "jupyter>=1.0.0",
    "datasets>=2.21.0",
    "streamlit>=1.37.1",
    "streamlit-ace>=0.1.1",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.16",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "apted==1.0.3",
    "distance==0.1.3",
    "lxml==5.3.0",
    "tabulate>=0.9.0",
    "latex2mathml>=3.77.0",
    "playwright>=1.49.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marker"]
